# trading-strategy

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  api.md  config.yaml.example  pyproject.toml  roadmap.md
deploy/: deploy.sh  start-all.sh  status.sh  stop-all.sh
scripts/: test_api.py
scripts/common/: paper-trader.py
scripts/hyperliquid/: funding-monitor.py  funding-oi-monitor.py
scripts/polymarket/: contrarian-monitor.py  strength-filtered-monitor.py
src/trading_core/: __init__.py
src/trading_core/api/: __init__.py  __main__.py  app.py  runner.py
src/trading_core/collectors/: __init__.py  __main__.py  hyperliquid.py  polymarket.py
src/trading_core/config/: __init__.py  loader.py  schema.py
src/trading_core/db/: __init__.py  engine.py
src/trading_core/exchange/: __init__.py  hyperliquid.py  polymarket.py
src/trading_core/logging/: __init__.py  setup.py
src/trading_core/metrics/: __init__.py  (+3 more)
systemd/: contrarian-monitor.service  hyperliquid-collector.service  hyperliquid-funding-oi.service  hyperliquid-funding.service  paper-engine.service  paper-trader.service  polymarket-collector.service  polymarket-strength-filtered.service  strategy-orchestrator.service  trading-api.service
tests/: conftest.py  test_accounts.py  test_collectors.py  test_config.py  test_exchange.py  test_indicators.py  test_logging.py  test_metrics.py  test_models.py  test_orchestrator.py  test_paper_engine.py  test_paper_engine_slippage_fees.py  test_price_oracle.py  test_risk.py  test_slippage_fees.py  test_strategies.py  test_strategy.py  test_strategy_docs.py
(+37 files in other folders)
